namespaces/live.cloud-platform.service.justice.gov.uk/cfe-crime-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cfe-crime-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    cloud-platform.justice.gov.uk/namespace: "cfe-crime-dev"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-eligibility-platform"
    cloud-platform.justice.gov.uk/application: "CFE Crime"
    cloud-platform.justice.gov.uk/owner: "Eligibility Platform: eligibility-platform@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cfe-crime"
    cloud-platform.justice.gov.uk/team-name: "laa-eligibility-platform"
    cloud-platform.justice.gov.uk/review-after: ""
